quick-start/overlays/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quick-start-service
  labels:
    app: quick-start
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: server
  selector:
    app: quick-start
  type: LoadBalancer
